22 February 2008
+ Reported interface written.
+ Punish system implemented
  o Users can be locked out of posting.
  o Users can be deactivated.
  o IP address of author can be denied.
+ Moved comment forms into its own class
+ New rules added to canComment function.
+ Locked users have their avatar turned into lock icon.
+ Italian translations added.
+ user_action and admin_action shrunk to uop and aop

+ Note: Access update required
+ Updated: img/lock.png, javascript/admin/head.js,
  templates/alt_view.tpl, templates/alt_view_one.tpl,
  templates/punish_pop.tpl, templates/reported.tpl,
  templates/style.css, templates/view.tpl, templates/view_one.tpl
  


19 February 2008
+ Added report function to flag comments. No interface written to view
  them yet.
+ Reduced default avatar size (update not required)

+ Updated: javascript/report/head.js (new directory)
+ templates/alt_view.tpl, templates/alt_view_one.tpl,
  templates/view.tpl, templates/view_one.tpl

30 January 2008
+ Creating unique index on comment_users (needed in update)
+ Fixed: Posting user infomration without avatar. Requires file
  cabinet upgrade.

Version 0.6.4 - 25 July 2007
-------------------------------------------------------------------
8 June 2007
+ Updated locale file.

1 June 2007
+ RFE #1720589 - Added ability to show most recent comments in a popup.
+ Added permission check on single comment view.
+ Updated files: templates/settings_form.tpl, templates/recent.tpl

Version 0.6.3
-------------------------------------------------------------------
+ Added setAnchor to comments. Needs newest version of DBPager.
+ Changed anchor tag to conform with Safari.

Version 0.6.2
-------------------------------------------------------------------
+ Fixed bug with ordering comments by age.

Version 0.6.1
-------------------------------------------------------------------
+ Added comments anchor.
+ Changed numbering method for translation.

Version 0.6.0