@@ -1,4 +1,4 @@
-<table cellpadding="5">
+<table cellpadding="5" width="99%">
   <tr>
     <th>{SUBJECT_SORT} {SUBJECT_LABEL}</th>
     <th>{ENTRY_LABEL}</th>
@@ -7,11 +7,12 @@
   </tr>
   <!-- BEGIN listrows --><tr>
     <td>{SUBJECT}</td>
-    <td>{ENTRY}</td>
+    <td>{ENTRY}{FULL}</td>
     <td>{REPORTED}</td>
     <td>{ACTION}</td>
   </tr><!-- END listrows -->
 </table>
+<!-- BEGIN message --><p>{EMPTY_MESSAGE}</p><!-- END message -->
 <div align="center">
   <b>{PAGE_LABEL}</b><br />
   {PAGES}<br />
