@@ -2,7 +2,6 @@
     padding : 5px;
 }
 
-
 .comments posted-info {
     font-size : .8em;
 }
